# InitfsTools

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md  toolchain-linux-winsdk.cmake
.github/workflows/: build.yml  build_linux.yml
ci/: Containerfile  run.sh
ci/qscintilla/: CMakeLists.txt
docs/: BUILD.md  BUILD_STATIC.md  CROSS-COMPILE.md
resources/: resources.qrc
src/: main.cpp
src/core/: Converter.cpp  Converter.h  DbManifestReconstructor.cpp  DbManifestReconstructor.h  DbObject.cpp  DbObject.h  DbReader.cpp  DbReader.h  DbWriter.cpp  DbWriter.h  EbxDescriber.cpp  EbxDescriber.h  IDeobfuscator.h  KeyManager.cpp  KeyManager.h  Logger.h  NativeReader.cpp  NativeReader.h  NativeWriter.cpp  NativeWriter.h  Sha1.h  ZstdDictReader.cpp  ZstdDictReader.h  sha1.cpp
src/core/bcrypt/: bcrypt.cpp  bcrypt.def
src/core/deobfuscators/: BF3Deobfuscator.cpp  BF3Deobfuscator.h  DADeobfuscator.cpp  DADeobfuscator.h  MEADeobfuscator.cpp  MEADeobfuscator.h  NullDeobfuscator.cpp  NullDeobfuscator.h  PVZDeobfuscator.cpp  PVZDeobfuscator.h
src/type_core/: LiveValueReader.cpp  LiveValueReader.h  MemoryReader.cpp  MemoryReader.h  TypeDumper.cpp
src/ui/: DictionaryWindow.cpp  DictionaryWindow.h  DiffWindow.cpp  DiffWindow.h  FindWindow.cpp  FindWindow.h  Initializer.cpp  Initializer.h  MainWindow.cpp  MainWindow.h  PresetWindow.cpp  PresetWindow.h  ReferenceLibWindow.cpp  ReferenceLibWindow.h  TypeExtractorWindow.cpp  TypeExtractorWindow.h
src/ui/language/: RuntimeTranslator.cpp  RuntimeTranslator.h
src/ui/payload_data/: Scripts__Debug__PseudoNames.txt.txt  Scripts__Debug__cycleMpLevels.txt  Scripts__Debug__cycleMpLevelsHavana.txt  Scripts__Debug__cycleNextLevel.txt  Scripts__Debug__cycleSpLevels.txt  Scripts__Debug__cycleSpLevelsViaMainMenu.txt  Scripts__Debug__eorLevel.txt  Scripts__Debug__giveAllPoints.txt  Scripts__Debug__joinMultiplayer.txt  Scripts__Debug__restartCheckpoint.txt  Scripts__Debug__restartLevel.txt  Scripts__Debug__stressEnterAndDestroyVehicles.txt  Scripts__Debug__timeoutLevel.txt  Scripts__Game__BugCommands.lua.txt  Scripts__Game__Configure.lua.txt  Scripts__Game__DebugSettings.lua.txt  Scripts__Game__RtsClientSettings.lua.txt  Scripts__Game__Settings.lua.txt  Scripts__Game__Startup.lua.txt  Scripts__GlobalSettings.lua.txt  Scripts__MayaExport__Startup.lua.txt  Scripts__Packages__Frost__Core.lua.txt  Scripts__Packages__Frost__Logging.lua.txt  Scripts__Pipeline__Configuration.lua.txt  Scripts__Pipeline__Settings.lua.txt  Scripts__Pipeline__Startup.lua.txt  Scripts__Server__Master.lua.txt  Scripts__Server__Server.lua.txt  Scripts__Server__Session.lua.txt  Scripts__Server__Shutdown.lua.txt  Scripts__Server__Startup.lua.txt  Scripts__Shell__ShellCore.lua.txt  Scripts__Shell__shellmodules__blaze.lua.txt  Scripts__Shell__shellmodules__config.lua.txt  Scripts__Shell__shellmodules__core.lua.txt  Scripts__Shell__shellmodules__origin.lua.txt  Scripts__Shell__shellmodules__salamander.lua.txt  Scripts__Shell__shellmodules__session.lua.txt  Scripts__Shell__shellmodules__test.lua.txt  Scripts__Shell__shellmodules__usersettings.lua.txt  (+10 more)
src/ui/preset_data/Game-Specific/: SWBF2 ExtremeInitfs 1.6-B.txt  SWBF2 ExtremeInitfs 1.6-X.txt  Skate DelMar Tweaks.txt  Skate Dingo Tweaks.txt
src/ui/preset_data/General/: Faster Load Times.txt  No Fps Lock.txt  RPCS3 Fixes.txt  ShadPS4 Fixes.txt
src/ui/preset_data/Graphic Utilities/: 1080p 60fps.txt  4K 60fps.txt
