cmake_minimum_required(VERSION 3.20)
project(qscintilla2_qt6 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_AUTOMOC ON)
find_package(Qt6 REQUIRED COMPONENTS Core Gui Widgets PrintSupport)
add_library(qscintilla2_qt6 STATIC)
file(GLOB_RECURSE QSC_SOURCES src/*.cpp src/*.cxx scintilla/*.cpp scintilla/*.cxx)
list(FILTER QSC_SOURCES EXCLUDE REGEX ".*/test/.*")
target_sources(qscintilla2_qt6 PRIVATE ${QSC_SOURCES})
file(GLOB_RECURSE QSC_HEADERS src/*.h)
target_sources(qscintilla2_qt6 PRIVATE ${QSC_HEADERS})
target_include_directories(qscintilla2_qt6 PUBLIC src src/Qsci scintilla/include scintilla/lexlib scintilla/src)
set_property(TARGET qscintilla2_qt6 PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded")
target_compile_definitions(qscintilla2_qt6 PRIVATE QSCINTILLA_STATIC SCINTILLA_QT SCI_LEXER)
target_compile_options(qscintilla2_qt6 PRIVATE /EHsc)
target_link_libraries(qscintilla2_qt6 PUBLIC Qt6::Core Qt6::Gui Qt6::Widgets Qt6::PrintSupport)
